backend/logs/exceptions.log
[2026-04-07 10:46:43] [31merror[39m: C:\PM-Lan\backend\src\controllers\attendanceController.js:15
};
^

SyntaxError: Unexpected token '}'
    at wrapSafe (node:internal/modules/cjs/loader:1464:18)
    at Module._compile (node:internal/modules/cjs/loader:1495:20)
    at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)
    at Module.load (node:internal/modules/cjs/loader:1266:32)
    at Module._load (node:internal/modules/cjs/loader:1091:12)
    at Module.require (node:internal/modules/cjs/loader:1289:19)
    at require (node:internal/modules/helpers:182:18)
    at Object.<anonymous> (C:\PM-Lan\backend\src\routes\attendance.routes.js:14:20)
    at Module._compile (node:internal/modules/cjs/loader:1521:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)
[2026-04-07 15:24:40] [31merror[39m: Error: Route.get() requires a callback function but got a [object Undefined]
    at Route.<computed> [as get] (C:\PM-Lan\backend\node_modules\express\lib\router\route.js:216:15)
    at proto.<computed> [as get] (C:\PM-Lan\backend\node_modules\express\lib\router\index.js:521:19)
    at Object.<anonymous> (C:\PM-Lan\backend\src\routes\activityRoutes.js:10:8)
    at Module._compile (node:internal/modules/cjs/loader:1521:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)
    at Module.load (node:internal/modules/cjs/loader:1266:32)
    at Module._load (node:internal/modules/cjs/loader:1091:12)
    at Module.require (node:internal/modules/cjs/loader:1289:19)
    at require (node:internal/modules/helpers:182:18)
    at Object.<anonymous> (C:\PM-Lan\backend\src\server.js:28:24)
[2026-04-08 21:26:23] [31merror[39m: Error: listen EADDRINUSE: address already in use :::5000
    at Server.setupListenHandle [as _listen2] (node:net:1908:16)
    at listenInCluster (node:net:1965:12)
    at Server.listen (node:net:2067:7)
    at startServer (C:\PM-Lan\backend\src\server.js:137:12)
    at process.processTicksAndRejections (node:internal/process/task_queues:95:5)
[2026-04-09 10:35:53] [31merror[39m: Error: Route.post() requires a callback function but got a [object Undefined]
    at Route.<computed> [as post] (C:\PM-Lan\backend\node_modules\express\lib\router\route.js:216:15)
    at proto.<computed> [as post] (C:\PM-Lan\backend\node_modules\express\lib\router\index.js:521:19)
    at Object.<anonymous> (C:\PM-Lan\backend\src\routes\authRoutes.js:43:8)
    at Module._compile (node:internal/modules/cjs/loader:1521:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)
    at Module.load (node:internal/modules/cjs/loader:1266:32)
    at Module._load (node:internal/modules/cjs/loader:1091:12)
    at Module.require (node:internal/modules/cjs/loader:1289:19)
    at require (node:internal/modules/helpers:182:18)
    at Object.<anonymous> (C:\PM-Lan\backend\src\server.js:20:20)
